--- a/package.json
+++ b/package.json
@@ -1,49 +1,33 @@
 {
-  "name": "node_project",
+  "name": "fruits-api",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.ts",
-  "directories": {
-    "test": "test"
-  },
+  "description": "A simple fruits API built with Fastify and TypeScript",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "npm run prisma:generate && npm run build && node dist/server.js",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "dev": "npm run prisma:generate && concurrently \"npm:watch\" \"npm:serve\"",
-    "watch": "tsc --watch",
-    "serve": "nodemon",
-    "prisma:generate": "prisma generate",
-    "test": "vitest run"
+    "start": "node dist/server.js",
+    "test": "vitest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@fastify/sensible": "^6.0.0",
-    "@prisma/client": "^6.9.0",
-    "@supabase/supabase-js": "^2.50.0",
-    "bcrypt": "^6.0.0",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.5.0",
-    "envsafe": "^2.0.3",
-    "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0",
+    "fastify": "^4.24.3",
+    "@prisma/client": "^5.6.0",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.21.4",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
-    "zod": "^3.25.57",
-    "zod-to-json-schema": "^3.24.5"
+    "dotenv": "^16.3.1",
+    "envsafe": "^7.0.4",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6",
+    "tsx": "^4.1.4",
+    "prisma": "^5.6.0",
+    "@types/node": "^20.8.10",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.31",
-    "@vitest/coverage-v8": "^3.2.3",
-    "concurrently": "^9.0.0",
-    "prisma": "^6.9.0",
-    "supertest": "^7.1.1",
-    "ts-node": "^10.4.0",
-    "tsx": "^4.19.4",
-    "typescript": "~5.8.2",
-    "vitest": "^3.2.3"
+    "@types/jsonwebtoken": "^9.0.5",
+    "supertest": "^6.3.3"
   }
 }
